--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Getting and Cleaning Data - Course Project
 
 This is the course project for the Getting and Cleaning Data Coursera course. The R script, run_analysis.R, does the following:
 
-Download the dataset if it does not already exist in the working directory
+Download the dataset
 Load the activity and feature info
 Loads both the training and test datasets, keeping only those columns which reflect a mean or standard deviation
 Loads the activity and subject data for each dataset, and merges those columns with the dataset
